<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityXuLyTruyen">

    <TextView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/background_main"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_capnhatTruyen"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="25dp"
        android:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="@id/back"
        app:layout_constraintStart_toStartOf="@id/back"
        app:layout_constraintTop_toTopOf="@id/back"
        android:orientation="vertical"
        android:layout_marginTop="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/back"
            app:layout_constraintStart_toStartOf="@id/back"
            app:layout_constraintTop_toTopOf="@id/back"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/title_matruyen"
                android:textSize="20dp"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/edit_matruyen"
                android:layout_width="220dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:enabled="false"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/back"
            app:layout_constraintStart_toStartOf="@id/back"
            app:layout_constraintTop_toTopOf="@id/back"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/title_tentruyen"
                android:textSize="20dp"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/edit_tentruyen"
                android:layout_width="220dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/title_gia"
                android:textSize="20dp"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/edit_giaTruyen"
                android:layout_width="220dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/title_tomtat"
                android:textSize="20dp"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/edit_tomtat"
                android:layout_width="220dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/title_nsx"
                android:textSize="20dp"
                android:textStyle="bold"
                />
            <Spinner
                android:id="@+id/spinnerNXB"
                android:layout_width="200dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/img_them"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_marginStart="100dp"
                app:layout_constraintEnd_toEndOf="@id/back"
                app:layout_constraintStart_toStartOf="@id/back"
                app:layout_constraintTop_toTopOf="@id/back" />
            <Button
                android:id="@+id/btnimg"
                app:layout_constraintTop_toBottomOf="@id/img_them"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:text="@string/title_themhinh"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >
            <Button
                android:id="@+id/btnThemTruyen"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/title_them"
                android:background="@drawable/background_main"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="10dp"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>