<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityDSNXB">

    <TextView
        android:id="@+id/home"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/icons8_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/themnxb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/back"
            app:layout_constraintStart_toStartOf="@id/back"
            app:layout_constraintTop_toTopOf="@id/back">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/title_manxb"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_manxb"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:fontFamily="serif"
                app:layout_constraintEnd_toEndOf="parent"
                android:enabled="false"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/back"
            app:layout_constraintStart_toStartOf="@id/back"
            app:layout_constraintTop_toTopOf="@id/back">

            <TextView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:fontFamily="serif"
                android:text="@string/title_tennxb"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_tennxb"
                android:layout_width="230dp"
                android:layout_height="50dp"
                android:fontFamily="serif"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            >

            <Button
                android:id="@+id/btnThemNXB"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="40dp"
                android:background="@drawable/background_main"
                android:text="@string/title_them"
                android:layout_marginEnd="20dp"
                />
            <Button
                android:id="@+id/btnsuanxb"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/title_sua"
                android:background="@drawable/background_main"
                android:layout_marginEnd="10dp"
                android:focusable="false"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tl"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/title_dsnxb"
        android:textColor="#2196F3"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themnxb"

        />

    <ListView
        android:id="@+id/listViewNXB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:divider="@color/white"
        android:listSelector="#03A9F4"
        android:padding="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tl" />
</androidx.constraintlayout.widget.ConstraintLayout>