<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="115dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="5dp"
    tools:context=".ActivityDSNXB"
    >
    <TextView
        android:id="@+id/backitem"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="@drawable/background_main"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/manxb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_manxb"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/item_manxb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/manxb"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/tennxb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_tennxb"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/item_manxb"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/item_tennxb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="kkkkkkkkkkkkk"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/item_manxb"
        app:layout_constraintStart_toEndOf="@id/tennxb"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/backitem"
        app:layout_constraintBottom_toBottomOf="@id/backitem"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        >
        <Button
            android:id="@+id/btntxoanxb"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/title_xoa"
            android:background="@drawable/background_main"
            android:focusable="false"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>