<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityChiTietNXB">
    <TextView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/background_dsmain"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_chitietNXB"
        android:textSize="25dp"
        android:textStyle="bold|italic"
        android:layout_marginTop="10dp"
        android:textColor="#1433E1"
        />
    <TextView
        android:id="@+id/ten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_tennxb"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="90dp"
        />
    <TextView
        android:id="@+id/tenNXB_chitiet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ten"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ten"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="90dp"
        />

    <TextView
        android:id="@+id/ma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_manxb"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="50dp"
        />
    <TextView
        android:id="@+id/manxb_chitiet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MA"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/ma"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>