<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    >
    <TextView
        android:id="@+id/backitem"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/background_main"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/img_itemdstruyen"
        android:layout_width="60dp"
        android:layout_height="90dp"
        android:background="@drawable/background_main"
        app:layout_constraintTop_toTopOf="@id/backitem"
        app:layout_constraintStart_toStartOf="@id/backitem"
        app:layout_constraintBottom_toBottomOf="@id/backitem"
        android:layout_marginStart="20dp"
        />
    <TextView
        android:id="@+id/matruyen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_matruyen"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/img_itemdstruyen"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:id="@+id/tr_matruyen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="111"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/matruyen"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="5dp"
        />
    <TextView
        android:id="@+id/tentruyen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_tentruyen"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/img_itemdstruyen"
        app:layout_constraintTop_toBottomOf="@id/tr_matruyen"
        android:layout_marginStart="10dp"

        />
    <TextView
        android:id="@+id/tr_tentruyen"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="AAAAA"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/tentruyen"
        app:layout_constraintTop_toBottomOf="@id/tr_matruyen"
        android:layout_marginStart="5dp"

        />
    <TextView
        android:id="@+id/tennxb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_nsx"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/tr_tentruyen"
        app:layout_constraintStart_toEndOf="@id/img_itemdstruyen"
        />
    <TextView
        android:id="@+id/tr_tennxb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BBBBBBBBBB"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/tr_tentruyen"
        app:layout_constraintStart_toEndOf="@id/tennxb"
        />
    <TextView
        android:id="@+id/btnXoaTruyen"
        android:layout_width="30dp"
        android:layout_height="28dp"
        android:background="@drawable/recycle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="45mm"
        android:layout_marginTop="15dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>